jenkins-helm/templates/jnlp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-jnlp
  namespace: kallepelli-rupesh-dev
spec:
  selector:
    app.kubernetes.io/instance: jenkins
    app.kubernetes.io/name: jenkins
  ports:
  - name: agent
    protocol: TCP
    port: 50000
    targetPort: 50000
  type: ClusterIP
