jenkins-helm/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jenkins
  labels:
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/instance: jenkins
spec:
  to:
    kind: Service
    name: jenkins
  port:
    targetPort: web
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
